<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="preferences_ad_blocking_category">Ad blocking options</string>
    <string name="preferences_primary_subscriptions_title">Language</string>
    <string name="preferences_primary_subscriptions_summary">Block more ads by optimizing Adblock Plus for the language(s) you typically browse in</string>
    <string name="preferences_other_subscriptions_title">More blocking options</string>
    <string name="preferences_other_subscriptions_summary">Remove tracking, social media buttons or add custom filter lists</string>
    <string name="preferences_allowlist_title">Add websites to the allowlist</string>
    <string name="preferences_allowlist_summary">Disable ad blocking on websites of your choosing</string>
    <string name="preferences_allowlist_header">Allowlisted websites</string>
    <string name="preferences_updates_title">Update ad-filter lists</string>
    <string name="preferences_updates_subtitle">Configure when to update the lists used to filter ads</string>
    <string name="preferences_automatic_updates_title">Automatic updates</string>
    <string name="preferences_automatic_updates_wifi_only">Wi-Fi only</string>
    <string name="preferences_automatic_updates_always">Always</string>
    <string name="preferences_update_subscriptions_title">Update now</string>
    <string name="preferences_acceptable_ads_category">@string/acceptable_ads</string>
    <string name="preferences_acceptable_ads_title">Allow some nonintrusive advertising</string>
    <string name="preferences_acceptable_ads_fragment_title">@string/acceptable_ads</string>
    <string name="preferences_acceptable_ads_summary">Annoying ads are always blocked, while some nonintrusive ads are displayed by default, so that content creators can publish their content for free</string>
    <string name="preferences_acceptable_ads_action">Yes, I\'ll support content creators</string>
    <string name="preferences_about_title">About</string>
    <string name="primary_subscriptions_active_category">Optimized for browsing in</string>
    <string name="primary_subscriptions_inactive_category">Additional languages</string>
    <string name="subscription_last_update">Last update: %s</string>
    <string name="subscription_last_update_never">Never</string>
    <string name="other_subscriptions_default_category">Built-in filter lists</string>
    <string name="other_subscriptions_custom_category">Active custom filter lists</string>
    <string name="other_subscriptions_add_custom_title">Add custom filter list</string>
    <string name="other_subscriptions_add_custom_hint">www.example.com/filterlist.txt</string>
    <string name="other_subscriptions_remove_custom_title">Confirm deletion</string>
    <string name="other_subscriptions_remove_custom_message">Are you sure you want to delete the custom filter list from %s?</string>
    <string name="other_subscriptions_dialog_title">Adding custom filter list</string>
    <string name="other_subscriptions_dialog_message">This might take a few seconds</string>
    <string name="other_subscriptions_error_add_custom">Error adding custom filter list</string>
    <string name="allowlist_add_title">Add a website to the allowlist</string>
    <string name="allowlist_add_hint">example.com</string>
    <string name="allowlist_delete_dialog_title">Confirm deletion</string>
    <string name="allowlist_delete_dialog_message">Are you sure you want to remove %s from the allowlist?</string>
    <string name="acceptable_ads_enabled_line1">Yes, I\'ll support content creators</string>
    <string name="acceptable_ads_enabled_line2">By keeping Acceptable Ads enabled, you\'re helping content creators publish their content for free</string>
    <string name="acceptable_ads_disabled">No, I\'d like to disable Acceptable Ads</string>
    <string name="about_privacy_policy">Privacy Policy</string>
    <string name="about_terms_of_use">Terms of Use</string>
    <string name="about_imprint">Imprint</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="version">Version</string>
    <string name="share_events_header">Help improve Adblock Plus</string>
    <string name="share_events_title">Share anonymized data</string>
    <string name="share_events_description">Anonymized data helps us improve Adblock Plus, thus creating a better browsing experience for you.</string>
    <string name="share_events_consent">Yes, I\'ll share some anonymized data.</string>
    <string name="languages_onboarding_title">Browsing in multiple languages?</string>
    <string name="languages_onboarding_description">Block more ads by optimizing Adblock Plus for the language(s) you typically browse in.</string>
    <string name="languages_onboarding_option_add">Add an additional ad blocking language.</string>
    <string name="languages_onboarding_option_skip">No thanks, I only browse in one language.</string>
</resources>