<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/preferences_round_bg"
            app:layout_constraintBottom_toBottomOf="@id/main_preferences_acceptable_ads"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/main_preferences_acceptable_ads" />


        <TextView
            android:id="@+id/main_preferences_acceptable_ads_category"
            style="@style/AbpPreferenceCategoryTitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preferences_acceptable_ads_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/main_preferences_acceptable_ads"
            style="@style/AbpPreferenceContainerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_preferences_acceptable_ads_category">

            <TextView
                style="@style/AbpPreferenceTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preferences_acceptable_ads_title" />

            <TextView
                style="@style/AbpPreferenceSummaryTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preferences_acceptable_ads_summary" />

            <TextView
                android:id="@+id/main_preferences_acceptable_ads_button"
                style="@style/AbpPreferenceSummaryTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="4dp"
                android:text="@string/preferences_acceptable_ads_action"
                android:textColor="@color/abp_blue_ribbon" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>