<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/preferences_group_bg_single"
            app:layout_constraintBottom_toBottomOf="@id/main_preferences_update_subscriptions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/main_preferences_primary_subscriptions" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/main_preferences_ad_blocking_category"
            style="@style/AbpPreferenceCategoryTitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preferences_ad_blocking_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/main_preferences_primary_subscriptions"
            style="@style/AbpPreferenceContainerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_preferences_ad_blocking_category">

            <com.google.android.material.textview.MaterialTextView
                style="@style/AbpPreferenceTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preferences_primary_subscriptions_title" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/AbpPreferenceSummaryTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preferences_primary_subscriptions_summary" />

        </LinearLayout>

        <View
            android:id="@+id/main_preferenced_divider_1"
            style="@style/AbpPreferenceDivider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_preferences_primary_subscriptions" />

        <LinearLayout
            android:id="@+id/main_preferences_other_subscriptions"
            style="@style/AbpPreferenceContainerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_preferenced_divider_1">

            <com.google.android.material.textview.MaterialTextView
                style="@style/AbpPreferenceTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preferences_other_subscriptions_title" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/AbpPreferenceSummaryTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preferences_other_subscriptions_summary" />

        </LinearLayout>

        <View
            android:id="@+id/main_preferenced_divider_2"
            style="@style/AbpPreferenceDivider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_preferences_other_subscriptions" />

        <LinearLayout
            android:id="@+id/main_preferences_allowlist"
            style="@style/AbpPreferenceContainerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_preferenced_divider_2">

            <com.google.android.material.textview.MaterialTextView
                style="@style/AbpPreferenceTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preferences_allowlist_title" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/AbpPreferenceSummaryTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preferences_allowlist_summary" />

        </LinearLayout>

        <View
            android:id="@+id/main_preferenced_divider_3"
            style="@style/AbpPreferenceDivider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_preferences_allowlist" />

        <LinearLayout
            android:id="@+id/main_preferences_blocklist"
            style="@style/AbpPreferenceContainerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_preferenced_divider_3">

            <com.google.android.material.textview.MaterialTextView
                style="@style/AbpPreferenceTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preferences_blocklist_title" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/AbpPreferenceSummaryTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preferences_blocklist_summary" />

        </LinearLayout>

        <View
            android:id="@+id/main_preferenced_divider_4"
            style="@style/AbpPreferenceDivider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_preferences_blocklist" />

        <LinearLayout
            android:id="@+id/main_preferences_automatic_updates"
            style="@style/AbpPreferenceContainerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_preferenced_divider_4">

            <com.google.android.material.textview.MaterialTextView
                style="@style/AbpPreferenceTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preferences_automatic_updates_title" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/AbpPreferenceSummaryTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preferences_automatic_updates_wifi_only"
                android:textColor="@color/abp_blue_ribbon" />

        </LinearLayout>

        <View
            android:id="@+id/main_preferenced_divider_5"
            style="@style/AbpPreferenceDivider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_preferences_automatic_updates" />

        <LinearLayout
            android:id="@+id/main_preferences_update_subscriptions"
            style="@style/AbpPreferenceContainerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_preferenced_divider_5">

            <com.google.android.material.textview.MaterialTextView
                style="@style/AbpPreferenceTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preferences_update_subscriptions_title" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/AbpPreferenceSummaryTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Last updated: Today, 13:37"
                tools:text="Last updated: Today, 13:37" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>