<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="org.adblockplus.adblockplussbrowser.preferences.ui.MainPreferencesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_preferences_acceptable_ads_include"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_preferences_ad_blocking_include">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/preferences_group_bg_single"
            app:layout_constraintBottom_toBottomOf="@id/main_preferences_acceptable_ads"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/main_preferences_acceptable_ads" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/main_preferences_acceptable_ads_category"
            style="@style/AbpPreferenceCategoryTitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preferences_acceptable_ads_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/main_preferences_acceptable_ads"
            style="@style/AbpPreferenceContainerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_preferences_acceptable_ads_category">

            <com.google.android.material.textview.MaterialTextView
                style="@style/AbpPreferenceTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preferences_acceptable_ads_title" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/AbpPreferenceSummaryTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preferences_acceptable_ads_summary" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/main_preferences_acceptable_ads_button"
                style="@style/AbpPreferenceSummaryTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="4dp"
                android:text="@{viewModel.acceptableAdsEnabled ? @string/preferences_acceptable_ads_action : @string/acceptable_ads_disabled}"
                android:textColor="@color/abp_foreground_accent" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>